# MyDGP

./: .gitignore  CMakeLists.txt  README.md  todolist.md
cgal/: CMakeLists.txt
cgal/src/hw0/: main.cpp
cgal/src/hw4/: tutte.cpp
latex/: PaperReadingLog.cls  clear.bat  readme.md
latex/MyDGP/hw0/: hw0_cgal.tex
latex/MyDGP/hw1/: hw1.tex
latex/MyDGP/hw4/: hw4.tex  hw4_cgal.tex
latex/hw0/: hw0_.tex
latex/hw4/: hw4.tex
mesh/: alien.off  alien_open.off
openmesh/: .gitignore  CMakeLists.txt  CMakeSettings.json
openmesh/src/general/: MeshDefinition.cpp  MeshDefinition.h  MeshUtilities.cpp  MeshUtilities.h
openmesh/src/hw0/: main.cpp
openmesh/src/hw4/: abf.cpp  arap.cpp  lscm.cpp  tutte.cpp
src/: ChapterWidget.cpp  ChapterWidget.h  DGPAlgorithm.cpp  DGPAlgorithm.h  Housework.qrc  MeshParamWidget.cpp  MeshParamWidget.h  itemdefinition.h  main.cpp  surfacemeshprocessing.cpp  surfacemeshprocessing.h
src/LinSysSolver/: EigenLinSolver.cpp  EigenLinSolver.h  LinSysSolver.hpp  MKLPardisoSolver.cpp  MKLPardisoSolver.h  PardisoSolver.h
src/MeshDefinition/: MyMesh.cpp  MyMesh.h  MyMesh_Openmesh.cpp  MyMesh_Openmesh.h
src/MeshViewer/: InteractiveViewerWidget.cpp  InteractiveViewerWidget.h  MainViewerWidget.cpp  MainViewerWidget.h  MeshViewerWidget.cpp  MeshViewerWidget.h  QGLViewerWidget.cpp  QGLViewerWidget.h
